@@ -1,3 +1,9 @@
+2007-09-12  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/parser.py (Script.__str__):  Fix format string for
+	output.
+	(Packages.__str__):  Output %end after all the packages.
+
 2007-09-10  Chris Lumens  <clumens@redhat.com>
 
 	* Makefile, MANIFEST.in, pykickstart.spec:  Add the kickstart
